kubeflow-deployments/private-blueprint/.build/istio/Base/Galley/Galley.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: istio-mesh-galley
  namespace: istio-system
  labels:
    release: istio
data:
  mesh: |-
    {}
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: galley-envoy-config
  namespace: istio-system
  labels:
    app: galley
    istio: galley
    release: istio
data:
  envoy.yaml.tmpl: |-
    admin:
      access_log_path: /dev/null
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15000

    static_resources:

      clusters:
      - name: in.9901
        http2_protocol_options: {}
        connect_timeout: 1.000s

        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 9901

        circuit_breakers:
          thresholds:
          - max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
            max_retries: 3

      listeners:
      - name: "15019"
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15019
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: HTTP2
              stat_prefix: "15010"
              http2_protocol_options:
                max_concurrent_streams: 1073741824

              access_log:
              - name: envoy.file_access_log
                config:
                  path: /dev/stdout

              http_filters:
              - name: envoy.router

              route_config:
                name: "15019"

                virtual_hosts:
                - name: istio-galley

                  domains:
                  - '*'

                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: in.9901
                      timeout: 0.000s
          tls_context:
            common_tls_context:
              alpn_protocols:
              - h2
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - google_grpc:
                        target_uri: unix:/var/run/sds/uds_path
                        channel_credentials:
                          local_credentials: {}
                        call_credentials:
                        - from_plugin:
                            name: envoy.grpc_credentials.file_based_metadata
                            config:
                              header_key: istio_sds_credentials_header-bin
                              secret_data:
                                filename: /var/run/secrets/tokens/istio-token
                        credentials_factory_name: envoy.grpc_credentials.file_based_metadata
                        stat_prefix: sdsstat
              combined_validation_context:
                default_validation_context:
                  verify_subject_alt_name: []
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - google_grpc:
                          target_uri: unix:/var/run/sds/uds_path
                          channel_credentials:
                            local_credentials: {}
                          call_credentials:
                          - from_plugin:
                              name: envoy.grpc_credentials.file_based_metadata
                              config:
                                header_key: istio_sds_credentials_header-bin
                                secret_data:
                                  filename: /var/run/secrets/tokens/istio-token
                          credentials_factory_name: envoy.grpc_credentials.file_based_metadata
                          stat_prefix: sdsstat
            require_client_certificate: true
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: istio-galley-admin-role-binding-istio-system
  labels:
    release: istio
roleRef:
  name: istio-galley-istio-system
  kind: ClusterRole
  apiGroup: rbac.authorization.k8s.io
subjects:
- name: istio-galley-service-account
  namespace: istio-system
  kind: ServiceAccount
---
# Resources for Galley component
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: istio-galley-istio-system
  labels:
    release: istio
rules:
- resources: ["*"]
  # For reading Istio resources
  apiGroups: ["authentication.istio.io", "config.istio.io", "networking.istio.io",
    "rbac.istio.io", "security.istio.io"]
  verbs: ["get", "list", "watch"]
  # For updating Istio resource statuses
- resources: ["*/status"]
  apiGroups: ["authentication.istio.io", "config.istio.io", "networking.istio.io",
    "rbac.istio.io", "security.istio.io"]
  verbs: ["update"]
- resources: ["validatingwebhookconfigurations"]
  apiGroups: ["admissionregistration.k8s.io"]
  verbs: ["*"]
- resources: ["deployments"]
  apiGroups: ["extensions", "apps"]
  resourceNames: ["istio-galley"]
  verbs: ["get"]
- resources: ["pods", "nodes", "services", "endpoints", "namespaces"]
  apiGroups: [""]
  verbs: ["get", "list", "watch"]
- resources: ["ingresses"]
  apiGroups: ["extensions"]
  verbs: ["get", "list", "watch"]
- resources: ["namespaces/finalizers"]
  apiGroups: [""]
  verbs: ["update"]
- resources: ["customresourcedefinitions"]
  apiGroups: ["apiextensions.k8s.io"]
  verbs: ["get", "list", "watch"]
- resources: ["clusterroles"]
  apiGroups: ["rbac.authorization.k8s.io"]
  verbs: ["get", "list", "watch"]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: istio-galley-configuration
  namespace: istio-system
  labels:
    release: istio
data:
  validatingwebhookconfiguration.yaml: |-
    apiVersion: admissionregistration.k8s.io/v1beta1
    kind: ValidatingWebhookConfiguration
    metadata:
      name: istio-galley-istio-system
      namespace: istio-system
      labels:
        app: galley
        release: istio
        istio: galley
    webhooks:
      - name: pilot.validation.istio.io
        clientConfig:
          service:
            name: istio-galley
            namespace: istio-system
            path: "/admitpilot"
          caBundle: ""
        rules:
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - config.istio.io
            apiVersions:
            - v1alpha2
            resources:
            - httpapispecs
            - httpapispecbindings
            - quotaspecs
            - quotaspecbindings
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - rbac.istio.io
            apiVersions:
            - "*"
            resources:
            - "*"
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - security.istio.io
            apiVersions:
            - "*"
            resources:
            - "*"
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - authentication.istio.io
            apiVersions:
            - "*"
            resources:
            - "*"
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - networking.istio.io
            apiVersions:
            - "*"
            resources:
            - destinationrules
            - envoyfilters
            - gateways
            - serviceentries
            - sidecars
            - virtualservices
        failurePolicy: Fail
        sideEffects: None
      - name: mixer.validation.istio.io
        clientConfig:
          service:
            name: istio-galley
            namespace: istio-system
            path: "/admitmixer"
          caBundle: ""
        rules:
          - operations:
            - CREATE
            - UPDATE
            apiGroups:
            - config.istio.io
            apiVersions:
            - v1alpha2
            resources:
            - rules
            - attributemanifests
            - circonuses
            - deniers
            - fluentds
            - kubernetesenvs
            - listcheckers
            - memquotas
            - noops
            - opas
            - prometheuses
            - rbacs
            - solarwindses
            - stackdrivers
            - cloudwatches
            - dogstatsds
            - statsds
            - stdios
            - apikeys
            - authorizations
            - checknothings
            # - kuberneteses
            - listentries
            - logentries
            - metrics
            - quotas
            - reportnothings
            - tracespans
            - adapters
            - handlers
            - instances
            - templates
            - zipkins
        failurePolicy: Fail
        sideEffects: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-galley
  namespace: istio-system
  labels:
    app: galley
    istio: galley
    release: istio
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: galley
  template:
    metadata:
      labels:
        app: galley
        chart: galley
        heritage: Tiller
        istio: galley
        release: istio
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istio-galley-service-account
      containers:
      - name: galley
        image: gcr.io/gke-release/asm/galley:1.4.7-asm.0
        command:
        - /usr/local/bin/galley
        - server
        - --meshConfigFile=/etc/mesh-config/mesh
        - --livenessProbeInterval=1s
        - --livenessProbePath=/tmp/healthliveness
        - --readinessProbePath=/tmp/healthready
        - --readinessProbeInterval=1s
        - --insecure=true
        - --enable-validation=true
        - --enable-reconcileWebhookConfiguration=true
        - --enable-server=true
        - --deployment-namespace=istio-system
        - --validation-webhook-config-file
        - /etc/config/validatingwebhookconfiguration.yaml
        - --monitoringPort=15014
        - --validation-port=9443
        - --log_output_level=default:info
        - --validation.tls.clientCertificate=/etc/dnscerts/cert-chain.pem
        - --validation.tls.privateKey=/etc/dnscerts/key.pem
        - --validation.tls.caCertificates=/etc/dnscerts/root-cert.pem
        ports:
        - containerPort: 9443
        - containerPort: 15014
        - containerPort: 15019
        - containerPort: 9901
        resources:
          requests:
            cpu: 100m
        volumeMounts:
        - name: dnscerts
          readOnly: true
          mountPath: /etc/dnscerts
        - name: config
          readOnly: true
          mountPath: /etc/config
        - name: mesh-config
          readOnly: true
          mountPath: /etc/mesh-config
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/galley
            - probe
            - --probe-path=/tmp/healthliveness
            - --interval=10s
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - /usr/local/bin/galley
            - probe
            - --probe-path=/tmp/healthready
            - --interval=10s
          initialDelaySeconds: 5
          periodSeconds: 5
        imagePullPolicy: IfNotPresent
      - name: istio-proxy
        image: gcr.io/gke-release/asm/proxyv2:1.4.7-asm.0
        args:
        - proxy
        - --serviceCluster
        - istio-galley
        - --templateFile
        - /var/lib/istio/galley/envoy/envoy.yaml.tmpl
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        - --trust-domain=gcp-private-dev.svc.id.goog
        ports:
        - containerPort: 9902
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: INSTANCE_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: SDS_ENABLED
          value: "true"
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: envoy-config
          mountPath: /var/lib/istio/galley/envoy
        - name: sds-uds-path
          readOnly: true
          mountPath: /var/run/sds
        - name: istio-token
          mountPath: /var/run/secrets/tokens
        imagePullPolicy: IfNotPresent
      volumes:
      - name: sds-uds-path
        hostPath:
          path: /var/run/sds
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: gcp-private-dev.svc.id.goog
              expirationSeconds: 43200
              path: istio-token
      - name: dnscerts
        secret:
          secretName: dns.istio-galley-service-account
      - name: envoy-config
        configMap:
          name: galley-envoy-config
      - name: config
        configMap:
          name: istio-galley-configuration
      - name: mesh-config
        configMap:
          name: istio-mesh-galley
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
            weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: istio-galley-service-account
  namespace: istio-system
  labels:
    app: galley
    release: istio
---
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  name: istio-galley
  namespace: istio-system
  labels:
    app: galley
    istio: galley
    release: istio
spec:
  selector:
    matchLabels:
      app: galley
      istio: galley
      release: istio
  minAvailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: istio-galley
  namespace: istio-system
  labels:
    app: galley
    istio: galley
    release: istio
spec:
  selector:
    istio: galley
  ports:
  - name: https-validation
    port: 443
    targetPort: 9443
  - name: http-monitoring
    port: 15014
  - name: grpc-mcp
    port: 9901
  - name: grpc-tls-mcp
    port: 15019
